[gd_scene load_steps=10 format=2]

[ext_resource path="res://Console/Console.gd" type="Script" id=1]
[ext_resource path="res://Console/Output.gd" type="Script" id=2]
[ext_resource path="res://Console/Input.gd" type="Script" id=3]
[ext_resource path="res://UI/Theme.tres" type="Theme" id=4]
[ext_resource path="res://GocoNet/GocoNet.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=4]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 2.0
content_margin_bottom = 2.0

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="Console" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
custom_styles/panel = SubResource( 4 )
script = ExtResource( 1 )

[node name="GocoNet" type="HTTPRequest" parent="."]
script = ExtResource( 5 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 4.0
margin_top = 2.0
margin_right = 316.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 312.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Output" type="RichTextLabel" parent="ScrollContainer/VBoxContainer"]
margin_right = 312.0
margin_bottom = 14.0
size_flags_horizontal = 3
bbcode_enabled = true
fit_content_height = true
scroll_active = false
selection_enabled = true
script = ExtResource( 2 )

[node name="Input" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 14.0
margin_right = 312.0
margin_bottom = 27.0

[node name="InputPrefix" type="Label" parent="ScrollContainer/VBoxContainer/Input"]
margin_right = 10.0
margin_bottom = 13.0
text = "->"

[node name="LineEdit" type="LineEdit" parent="ScrollContainer/VBoxContainer/Input"]
margin_left = 14.0
margin_right = 312.0
margin_bottom = 13.0
size_flags_horizontal = 3
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
context_menu_enabled = false
virtual_keyboard_enabled = false
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 3 )

[connection signal="text_changed" from="ScrollContainer/VBoxContainer/Input/LineEdit" to="." method="_on_input_text_changed"]
